welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value estSurBiscruit
  while(!estSurBiscruit()){
         ^DwarfCode:7: error: not found: value estSurBiscruit
  while(!estSurBiscruit()){
         ^