welcome.lessons.welcome.summative.Moria.scala.code
while(getCouleurSol()!=Color.GREEN){
  while(!estSurBiscruit()){
    avance();
  }
  prendBiscuit();
  gauche();gauche();
  while(!estSurBiscruit()){
    avance();
  }
  recule();
  poseBiscuit();
  gauche();gauche();
  
}